--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Shopping List Check Off</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <style>
     .emptyMessage {
